# dbd_line_bot

./: .env.local  .gitignore  README.md  renovate.json
.github/workflows/: assign-reviewer.yml  ci.yml  config.yml
app/: Makefile  pyproject.toml  pytest.ini
app/src/: env.py  lambda_batch.py  lambda_types.py  lambda_webhook_handler.py  open_api.py
app/tests/: lambda_helper.py  test_env.py  test_lambda_batch.py  test_lambda_webhook_handler.py
batch/: Dockerfile  lambda_function.py  pyproject.toml  requirement.txt  test_lambda_function.py
cdk/: .eslintrc  .prettierignore  cdk.json  jest.config.js  package-lock.json  package.json
cdk/lib/: cdk-stack.ts
cdk/test/: cdk.test.ts  snapshot-serializer.ts
cdk/test/__snapshots__/: cdk.test.ts.snap
infra/module/: .terraform.lock.hcl  main.tf
infra/services/batch/: main.tf
infra/services/webhook_handler/: main.tf
webhook_handler/: Dockerfile  lambda_function.py  pyproject.toml  requirements.txt
