[tool.poetry]
name = "dbd_bot"
version = "0.1.0"
description = ""
authors = ["pep299"]

[tool.poetry.dependencies]
python = "^3.9"
line-bot-sdk = "^2.2.1"
tweepy = "^4.9.0"
boto3 = "^1.24.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
pytest-env = "^0.6.2"
moto = {extras = ["s3", "ssm"], version = "^3.1.11"}
pytest-freezegun = "^0.4.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
