[tool.poetry]
name = "dbd_bot"
version = "0.1.0"
description = ""
authors = ["pep299"]

[tool.poetry.dependencies]
python = "^3.9"
line-bot-sdk = "^2.2.1"
tweepy = "^4.9.0"
boto3 = "^1.24.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
pytest-env = "^0.8.0"
moto = {extras = ["s3", "ssm"], version = "^4.0.0"}
pytest-freezegun = "^0.4.2"
pytest-cov = "^4.0.0"
pysen = "^0.10.2"
black = "^22.3.0"
flake8 = "^5.0.0"
isort = "^5.10.1"
mypy = "^0.982"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py38"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
